--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 body {
     height: 1490px;
-    margin:0;
-    padding:0;
 
 }
 .header_text {
@@ -14,14 +12,30 @@ body {
 .container {
     display: inline-grid;;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 50px 100px;
     grid-gap: 1em;
     justify-items: start;
     align-items: start;
-    width: 1200px;
-    height: 1490px;
+
 }
 
-.item1 { grid-row: span 10; width: 650px; }
-.item2 { grid-row: span 15; }
-.item3 { grid-row: span 11; }
-.item4 { grid-row: span 20;width: 560px; }
+.item1 { 
+    grid-row: span 10; 
+    width: 670px; 
+}
+.item2 { 
+    grid-row: span 15;
+    width: 670px; 
+    height: 980px;
+}
+.item3 { 
+    grid-row: span 11;
+    width: 670px; 
+    height: 900px;
+    
+}
+.item4 { 
+    grid-row: span 20;
+    width: 670px; 
+    height: 525px;
+}
