--- a/css/style.css
+++ b/css/style.css
@@ -16,27 +16,31 @@ body {
     grid-gap: 1em;
     justify-items: start;
     align-items: start;
-
+    
 }
 
 .item1 { 
     grid-row: span 10; 
     width: 670px; 
-    height: 500px;
+    height: 560px;
+    object-fit: cover;
 }
 .item2 { 
     grid-row: span 15;
     width: 670px; 
-    height: 990px;
+    height: 840px;
+    object-fit: cover;
 }
 .item3 { 
     grid-row: span 11;
-    width: 670px; 
-    height: 900px;
+    Width: 600px;
+    Height:840px;
+    object-fit: cover;
     
 }
 .item4 { 
     grid-row: span 20;
-    width: 670px; 
-    height: 590px;
+    width: 600px;
+    height: 560px; 
+    object-fit: cover;
 }
